clean up headings and formatting

--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Processing Manual
 pages:
-    - About: about.md
+    - About: index.md
     - Planning: planning.md
     - Processing: processing.md
