--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -1,7 +1,8 @@
 site_name: RAC Processing Manual
 copyright: Version 1.1 May 2017, Copyright © The Rockefeller Archive Center
 pages:
-    - About: index.md
+    - Home: index.md
+    - About: about.md
     - Planning: planning.md
     - Processing: processing.md
 
