--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -1,9 +1,12 @@
 site_name: RAC Processing Manual
+site_url: http://processingmanual.rockarch.org
 copyright: Version 1.1 May 2017, Copyright © The Rockefeller Archive Center
 pages:
     - Home: index.md
     - About: about.md
     - Planning: planning.md
     - Processing: processing.md
+
+theme: readthedocs
 
 google_analytics: ['UA-36723568-3', 'mkdocs.org']
