--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 public: true
-type: docs
+type: "docs"
 tags:
-  - processing
-  - planning
-  - project vitals
-slug: processing_manual
-title: Guide to Processing Collections at the RAC
+  - "processing"
+  - "planning"
+  - "project vitals"
+slug: "processing_manual"
+title: "Guide to Processing Collections at the RAC"
