adds description to config file

--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,4 @@ tags:
   - "project vitals"
 slug: "processing_manual"
 title: "Guide to Processing Collections at the RAC"
+description: "A manual for arranging and describing archival collections."
