--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,5 @@ tags:
   - "processing"
   - "planning"
   - "project vitals"
-slug: "processing_manual"
 title: "Guide to Processing Collections at the RAC"
-description: "A manual for arranging and describing archival collections."
+description: "A manual for arranging and describing archival collections. CRON TEST"
