removing test text

--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ tags:
   - "planning"
   - "project vitals"
 title: "Guide to Processing Collections at the RAC"
-description: "A manual for arranging and describing archival collections. CRON TEST"
+description: "A manual for arranging and describing archival collections."
