--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,7 @@ tags:
   - "project vitals"
 title: "Guide to Processing Collections at the RAC"
 description: "A manual for arranging and describing archival collections."
+pages:
+  - ["About", "about"]
+  - ["Planning", "planning"]
+  - ["Processing", "processing"]
