--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ tags:
   - "processing"
   - "planning"
   - "project vitals"
-title: "Guide to Processing Collections at the RAC"
+title: "Guide to Processing Collections"
 description: "A manual for arranging and describing archival collections."
 pages:
   - ["About", "about"]
