placed about page content into index file

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,6 @@ tags:
 title: "Guide to Processing Collections"
 description: "A manual for arranging and describing archival collections."
 pages:
-  - ["About", "about"]
+  - ["Rockefeller Archive Center Guide to Processing Collections", "index"]
   - ["Planning", "planning"]
   - ["Processing", "processing"]
