--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,6 @@ tags:
 title: "Guide to Processing Collections"
 description: "A manual for arranging and describing archival collections."
 pages:
-  - ["Rockefeller Archive Center Guide to Processing Collections", "index"]
+  - ["Guide to Processing Collections", "index"]
   - ["Planning", "planning"]
   - ["Processing", "processing"]
